Fixed whitespaces

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,10 +4,6 @@
  font-family: 'Montserrat', sans-serif;
 }
 
-body {
- overflow-x: hidden;
-}
-
 html, body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 abbr, address, cite, code,
