--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -1,4 +1,5 @@
 .landing {
+    overflow-x: hidden!important;
     position: absolute;
     top: 0;
     left: 0;
@@ -20,4 +21,7 @@
     -webkit-text-fill-color: transparent;
     background-clip: text;
     font-weight: 700;
+}
+.down {
+    background-color: #8859EC;
 }
